<resources>
    <string name="app_name">myCoffeeTracker</string>

    <!-- Basic placeholder text -->
    <string name="start">Start</string>
    <string name="clear">Clear all</string>

    <!-- contentDescription strings for quality icons -->
    <string name="quality_0">Sleep Quality 0</string>
    <string name="quality_1">Sleep Quality 1</string>
    <string name="quality_2">Sleep Quality 2</string>
    <string name="quality_3">Sleep Quality 3</string>
    <string name="quality_4">Sleep Quality 4</string>
    <string name="quality_5">Sleep Quality 5</string>

    <!-- Output to TextView styled with a little HTML -->
    <string name="title"><![CDATA[<h3>HERE IS YOUR COFFEE DATA</h3>]]></string>
    <string name="start_time"><![CDATA[<b>Time:</b>]]></string>
    <string name="end_time"><![CDATA[<b>End:</b>]]></string>
    <string name="quality"><![CDATA[<b>Quality:</b>]]></string>
    <string name="amount"><![CDATA[<b>Amount:</b>]]></string>

    <!-- Coffee logger strings -->
    <string name="title_logger">How was your coffee?</string>
    <string name="amount_of_coffee">Amount of coffee:</string>
    <string name="time_label">Time:</string>
    <string-array name="coffees_array">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string name="done">done</string>
    <string name="hint">500mL</string>
    <string name="quick_add">Quick add</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>

</resources>
