<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Putting this into a layout allows data binding with the CoffeeLoggerViewmodel -->
    <data>

        <variable
            name="coffeeLoggerViewModel"
            type="com.example.mycoffeetracker.coffeelogger.CoffeeLoggerViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".coffeelogger.CoffeeLoggerFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".coffeelogger.CoffeeLoggerFragment">

           <TextView
               android:id="@+id/title_text"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="44dp"
               android:layout_marginTop="@dimen/margin"
               android:text="@string/title_logger"
               android:textSize="@dimen/title_text_size"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent" />

            <!-- onClick for the following imageviews will call onDone and submit a int value of coffee ml-->
            <TextView
                android:id="@+id/quickAddLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginTop="28dp"
                android:text="@string/quick_add"
                android:textSize="@dimen/label"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_text" />

            <ImageView
                android:id="@+id/smallCoffee"
                android:layout_width="57dp"
                android:layout_height="118dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="60dp"
                android:contentDescription="Small coffee icon"
                android:onClick="@{() -> coffeeLoggerViewModel.onDone(295)}"
                app:layout_constraintEnd_toStartOf="@+id/mediumCoffee"
                app:layout_constraintTop_toBottomOf="@+id/quickAddLabel"
                app:srcCompat="@drawable/pitr_coffee_cup_icon" />

            <ImageView
                android:id="@+id/mediumCoffee"
                android:layout_width="74dp"
                android:layout_height="141dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="48dp"
                android:contentDescription="Medium coffee icon"
                android:onClick="@{() -> coffeeLoggerViewModel.onDone(414)}"
                app:layout_constraintEnd_toStartOf="@+id/largeCoffee"
                app:layout_constraintTop_toBottomOf="@+id/quickAddLabel"
                app:srcCompat="@drawable/pitr_coffee_cup_icon" />

            <ImageView
                android:id="@+id/largeCoffee"
                android:layout_width="82dp"
                android:layout_height="180dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="40dp"
                android:contentDescription="Large coffee icon"
                android:onClick="@{() -> coffeeLoggerViewModel.onDone(590)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/quickAddLabel"
                app:srcCompat="@drawable/pitr_coffee_cup_icon" />

            <TextView
                android:id="@+id/small_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="8dp"
                android:text="@string/small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/smallCoffee" />

            <TextView
                android:id="@+id/medium_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="180dp"
                android:layout_marginTop="8dp"
                android:text="@string/medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/smallCoffee" />

            <TextView
                android:id="@+id/large_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="312dp"
                android:layout_marginTop="8dp"
                android:text="@string/large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/smallCoffee" />


        </androidx.constraintlayout.widget.ConstraintLayout>

   </androidx.constraintlayout.widget.ConstraintLayout>
</layout>